[package]
name = "hetu"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    ".",
    "crates/accumulator",
    "crates/vlc",
    "crates/cops",
    "tools/replication-control",
    "tools/replication-control-messages",
    "tools/kademlia-control-messages",
    "zchronod/zchronod",
    "demos/test_conflict",
    "demos/coll-tx",
    "demos/vlc-dag",
    "tools/kademlia-control-messages", "demos/test_conflict",
    "crates/kitsune_p2p/bootstrap",
    "crates/kitsune_p2p/bootstrap_client",
    "crates/kitsune_p2p/dht",
    "crates/kitsune_p2p/dht_arc",
    "crates/kitsune_p2p/fetch",
    "crates/kitsune_p2p/kitsune_p2p",
    "crates/kitsune_p2p/mdns",
    "crates/kitsune_p2p/proxy",
    "crates/kitsune_p2p/timestamp",
    "crates/kitsune_p2p/transport_quic",
    "crates/kitsune_p2p/types",
    "crates/p2p",
    "crates/protos",
]

[workspace.lints.clippy]
nursery = "allow"
cargo = "allow"
pedantic = "allow"
restriction = "allow"
style = "deny"
complexity = "deny"
perf = "deny"
correctness = "deny"
dbg_macro = "deny"

[profile.release]
# debug = true
strip = true
incremental = true

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
async-trait = "0.1.74"
axum = "0.7.1"
borsh = { version = "1.2.0", features = ["derive"] }
ethnum = "1.5.0"
kademlia-control-messages = { version = "0.1.0", path = "tools/kademlia-control-messages" }
rand = "0.8.5"
replication-control-messages = { version = "0.1.0", path = "tools/replication-control-messages" }
secp256k1 = { version = "0.28.0", features = [
    "hashes",
    "rand",
    "global-context",
] }
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = "0.7.10"

[lib]
name = "test"
path = "src/lib.rs"

