[package]
name = "protos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
prost = "0.12.4"
prost-types = "0.12.4"
tokio = "1.37.0"

[build-dependencies]
prost-build = { version = "0.12.4" }


[lints]
workspace = true
