[package]
name = "db_sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.10"
once_cell = "1.4.1"
thiserror = "1.0.58"
derive_more = "0.99"
tokio = "1.37.0"
async-trait = "0.1.79"
tracing = "0.1.40"
shrinkwraprs = "0.3.0"